Fix funnel flow to include OTO page

--- a/one-time-offer.html
+++ b/one-time-offer.html
@@ -761,6 +761,7 @@
                     <button class="complete-button" onclick="scrollToOrderForm()" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; border: none; padding: 25px 50px; font-size: 1.4em; font-weight: bold; border-radius: 60px; cursor: pointer; box-shadow: 0 15px 40px rgba(40, 167, 69, 0.5); transition: all 0.3s ease; text-transform: uppercase; letter-spacing: 2px;">
                         🛒 YES! Give Me Pastor Adebayo's Complete Protocol
                     </button>
+                    <a href="thank-you.html" class="continue-button">No, Thank You. I'll Stick With The Initial Offer</a>
                     
                     <p style="margin-top: 20px; font-size: 1.1em; opacity: 0.9; text-align: center;">*Free shipping anywhere in Nigeria • Secure payment • Ministry-friendly installments available</p>
                 </div>
