Remove monthly payment options

--- a/one-time-offer.html
+++ b/one-time-offer.html
@@ -822,8 +822,7 @@
                             <label style="display: block; margin-bottom: 8px; font-weight: bold; color: #155724;">Payment Option *</label>
                             <select required style="width: 100%; padding: 15px; border: 2px solid #28a745; border-radius: 8px; font-size: 1.1em;">
                                 <option value="">Choose your payment option...</option>
-                                <option value="full-payment">Full Payment - ₦89,500</option>
-                                <option value="3-payments">3 Monthly Payments - ₦29,833 each</option>
+                                <option value="full-payment">Full Payment - ₦135,792.50</option>
                                 <option value="bank-transfer">Bank Transfer</option>
                                 <option value="pay-on-delivery">Pay on Delivery (+₦2,000)</option>
                             </select>
@@ -911,6 +910,10 @@
             e.preventDefault();
             // Redirect to thank you page
             window.location.href = 'thank-you.html';
+        });
+    </script>
+</body>
+</html>>k-you.html';
         });
     </script>
 </body>
