Change checkbox to paragraph

--- a/post-submission.html
+++ b/post-submission.html
@@ -888,12 +888,7 @@
                         </select>
                     </div>
                     
-                    <div style="background: rgba(40, 167, 69, 0.1); padding: 20px; border-radius: 10px; margin: 20px 0;">
-                        <label style="display: flex; align-items: flex-start; gap: 10px; font-size: 0.95em; line-height: 1.4;">
-                            <input type="checkbox" required style="margin-top: 4px;">
-                            <span>I understand that Forever Living Aloe Vera Gel is a nutritional supplement, not medicine. I will consult with my healthcare provider before making changes to current medications. Individual results may vary.</span>
-                        </label>
-                    </div>
+                    <p style="font-size: 0.9em; color: #666; text-align: center; margin-top: 20px;">I understand that Forever Living Aloe Vera Gel is a nutritional supplement, not medicine. I will consult with my healthcare provider before making changes to current medications. Individual results may vary.</p>
                     
                     <button type="submit" class="order-button" style="width: 100%; margin-top: 20px;">
                         🔒 YES! SECURE MY 2-BOTTLE PACK NOW! - ₦88,450
