Remove sharing feature from thank-you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -330,7 +330,7 @@
                         <span class="process-icon">📚</span>
                         <div>
                             <strong>Step 3: Digital Resources (Immediate)</strong><br>
-                            Download your Pastor's Protocol Guide and bonuses instantly via email and WhatsApp.
+                            Your Pastor's Protocol Guide and bonuses will be sent to you via WhatsApp and email.
                         </div>
                     </div>
                     
