Require personal info before results; show results on post-submission; update flow

--- a/index.html
+++ b/index.html
@@ -954,3 +954,5 @@ src="https://www.facebook.com/tr?id=31576639681951470&ev=PageView&noscript=1"
     fbq('track', 'Lead');
   });
 </script>
+</body>
+</html>
