--- a/scorecard.html
+++ b/scorecard.html
@@ -445,6 +445,13 @@ src="https://www.facebook.com/tr?id=31576639681951470&ev=PageView&noscript=1"
         localStorage.setItem('heartHealthScore', score);
         localStorage.setItem('assessmentAnswers', JSON.stringify(Array.from(selects).map(s => ({name: s.name, value: s.value}))));
 
+        // Track assessment completion (Meta Pixel custom event)
+        try {
+          if (typeof fbq === 'function') {
+            fbq('trackCustom', 'AssessmentCompleted', { score: score });
+          }
+        } catch (e) {}
+
         // Copy assessment answers to hidden fields
         for (let i = 1; i <= 20; i++) {
           const questionSelect = document.querySelector(`select[name="q${i}"]`);
