--- a/scorecard.html
+++ b/scorecard.html
@@ -445,10 +445,10 @@ src="https://www.facebook.com/tr?id=31576639681951470&ev=PageView&noscript=1"
         localStorage.setItem('heartHealthScore', score);
         localStorage.setItem('assessmentAnswers', JSON.stringify(Array.from(selects).map(s => ({name: s.name, value: s.value}))));
 
-        // Track assessment completion (Meta Pixel custom event)
+        // Track assessment completion with a standard event (no sensitive params)
         try {
           if (typeof fbq === 'function') {
-            fbq('trackCustom', 'AssessmentCompleted', { score: score });
+            fbq('track', 'CompleteRegistration');
           }
         } catch (e) {}
 
