allow content security policy

--- a/scorecard.html
+++ b/scorecard.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trinity Heart Health Scorecard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+
 <!-- Meta Pixel Code -->
-<!-- Meta Pixel Code -->
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
