feat: Enable Facebook CAPI and update scripts

--- a/scorecard.html
+++ b/scorecard.html
@@ -89,12 +89,48 @@
 const questions = [
   "How often do you feel short of breath during or after preaching?",
   "Do you regularly experience dizziness, headaches, or chest tightness?",
+  "How many hours of restful sleep do you get each night?",
+  "How often do you feel fully energized when you wake up?",
+  "How would you rate your stamina during long services?",
+  "How many days a week do you eat fruits and vegetables?",
+  "Do you regularly eat fried or processed foods?",
+  "How often do you drink at least 2 liters of water daily?",
+  "Do you take supplements consistently?",
+  "How often do you eat late at night after church activities?",
+  "How often do you feel overwhelmed by ministry responsibilities?",
+  "Do you set aside time for rest each week?",
+  "How often do you pray specifically for your health?",
+  "Do you believe poor health could limit your calling?",
+  "How often do you teach your congregation about health?",
+  "How confident are you that you can preach actively for the next 10 years?",
+  "Do you have a family history of high blood pressure or heart disease?",
+  "How often do you go for medical checkups or BP monitoring?",
+  "How prepared is your ministry if your health fails temporarily?",
+  "Do you see yourself still preaching actively past the age of 70?"
  
 ];
 
 const options = [
   ["Never", "Rarely", "Sometimes", "Often", "Always"],
   ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Less than 4", "4-5", "6", "7", "8 or more"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Very Poor", "Poor", "Average", "Good", "Excellent"],
+  ["0 days", "1-2 days", "3-4 days", "5-6 days", "Daily"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"],
+  ["Never", "Rarely", "Sometimes", "Often", "Always"],
+  ["Not Confident", "Slightly Confident", "Moderately Confident", "Confident", "Very Confident"],
+  ["No", "Yes, minor", "Yes, moderate", "Yes, severe", "Not Sure"],
+  ["Never", "Rarely", "Sometimes", "Often", "Regularly"],
+  ["Not Prepared", "Slightly Prepared", "Moderately Prepared", "Well Prepared", "Fully Prepared"],
+  ["Not at all", "Unlikely", "Not Sure", "Likely", "Definitely"]
   
 ];
 
