--- a/scorecard.html
+++ b/scorecard.html
@@ -151,9 +151,18 @@ document.getElementById('submitBtn').addEventListener('click', () => {
   document.getElementById('pastorInfoSection').style.display = 'block';
 });
 
-// Helper: get value by name from FormData
-function getFormValue(formData, name) {
-  return formData.get(name) ? formData.get(name).trim() : '';
+// Helper to get cookie by name
+function getCookie(name) {
+  const match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
+  return match ? match[2] : '';
+}
+
+// Simple UUID generator for event_id
+function generateUUID() {
+  return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+    var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
+    return v.toString(16);
+  });
 }
 
 // On submit, send all required fields to Google Sheet
@@ -166,6 +175,15 @@ document.getElementById('pastorInfoSection').addEventListener('submit', async (e
   // Add Event Time and Source
   formData.set('Event Time', new Date().toISOString());
   formData.set('Event Source URL', window.location.href);
+
+  // Add client identifiers for EMQ
+  formData.set('User Agent', navigator.userAgent);
+  formData.set('fbp', getCookie('_fbp'));
+  formData.set('fbc', getCookie('_fbc'));
+
+  // Generate unique event_id for dedup
+  const eventId = generateUUID();
+  formData.set('Event ID', eventId);
 
   // Also collect the answers to the 20 questions
   for (let i = 1; i <= questions.length; i++) {
@@ -190,7 +208,8 @@ document.getElementById('pastorInfoSection').addEventListener('submit', async (e
       body: params.toString()
     });
 
-    fbq('track', 'Lead');
+    // Fire pixel with eventID for deduplication
+    fbq('track', 'Lead', {}, {eventID: eventId});
 
     window.location.href = 'post-submission.html';
   } catch (error) {
