--- a/scorecard.html
+++ b/scorecard.html
@@ -190,32 +190,36 @@ document.getElementById('pastorInfoSection').addEventListener('submit', async (e
   const eventId = generateUUID();
 
   // Add metadata
-  formData.set('Event Time', new Date().toISOString());
+  const isoNow = new Date().toISOString();
+  formData.set('Event Time', isoNow);
   formData.set('Event Source URL', window.location.href);
   formData.set('Event ID', eventId);
-  formData.set('User Agent', navigator.userAgent);
-  formData.set('fbp', getCookie('_fbp'));
-  formData.set('fbc', getCookie('_fbc'));
+  formData.set('User Agent', navigator.userAgent || '');
+  formData.set('fbp', getCookie('_fbp') || '');
+  formData.set('fbc', getCookie('_fbc') || '');
 
-  // Append question answers
   for (let i = 1; i <= questions.length; i++) {
     const sel = document.querySelector(`select[name="q${i}"]`);
     if (sel) formData.set(`Q${i}`, sel.value);
   }
 
-  // Convert to URL-encoded format for Apps Script
+  // Convert to URL-encoded
   const params = new URLSearchParams();
   formData.forEach((v, k) => params.append(k, v));
 
   try {
-    // Save data to Google Sheets
-    await fetch('https://script.google.com/macros/s/AKfycbxs0ImTg3lDGe9MXP3kSLd_GxCSPLBJLNmjeZIQ5mylyBNaJwHO9eUhkaCyA6wjTmZX/exec', {
+    // POST to Apps Script
+    const appsResp = await fetch('https://script.google.com/macros/s/AKfycbxs0ImTg3lDGe9MXP3kSLd_GxCSPLBJLNmjeZIQ5mylyBNaJwHO9eUhkaCyA6wjTmZX/exec', {
       method: 'POST',
       headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
       body: params.toString()
     });
 
-    // 🔥 Fire Meta Pixel with advanced matching + dedup
+    // Optionally inspect Apps Script response
+    const appsText = await appsResp.text();
+    console.log('AppsScript response:', appsText);
+
+    // Fire Meta Pixel with advanced matching + dedup
     fbq('track', 'Lead', {
       content_name: 'Heart Health Scorecard',
       event_source_url: window.location.href,
