Revert "refactor: Update scorecard.html submit handler"
This reverts commit a3bc6984ce156ead77caf6a95c56efce0665bca0.

--- a/scorecard.html
+++ b/scorecard.html
@@ -190,36 +190,32 @@ document.getElementById('pastorInfoSection').addEventListener('submit', async (e
   const eventId = generateUUID();
 
   // Add metadata
-  const isoNow = new Date().toISOString();
-  formData.set('Event Time', isoNow);
+  formData.set('Event Time', new Date().toISOString());
   formData.set('Event Source URL', window.location.href);
   formData.set('Event ID', eventId);
-  formData.set('User Agent', navigator.userAgent || '');
-  formData.set('fbp', getCookie('_fbp') || '');
-  formData.set('fbc', getCookie('_fbc') || '');
+  formData.set('User Agent', navigator.userAgent);
+  formData.set('fbp', getCookie('_fbp'));
+  formData.set('fbc', getCookie('_fbc'));
 
+  // Append question answers
   for (let i = 1; i <= questions.length; i++) {
     const sel = document.querySelector(`select[name="q${i}"]`);
     if (sel) formData.set(`Q${i}`, sel.value);
   }
 
-  // Convert to URL-encoded
+  // Convert to URL-encoded format for Apps Script
   const params = new URLSearchParams();
   formData.forEach((v, k) => params.append(k, v));
 
   try {
-    // POST to Apps Script
-    const appsResp = await fetch('https://script.google.com/macros/s/AKfycbxs0ImTg3lDGe9MXP3kSLd_GxCSPLBJLNmjeZIQ5mylyBNaJwHO9eUhkaCyA6wjTmZX/exec', {
+    // Save data to Google Sheets
+    await fetch('https://script.google.com/macros/s/AKfycbxs0ImTg3lDGe9MXP3kSLd_GxCSPLBJLNmjeZIQ5mylyBNaJwHO9eUhkaCyA6wjTmZX/exec', {
       method: 'POST',
       headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
       body: params.toString()
     });
 
-    // Optionally inspect Apps Script response
-    const appsText = await appsResp.text();
-    console.log('AppsScript response:', appsText);
-
-    // Fire Meta Pixel with advanced matching + dedup
+    // 🔥 Fire Meta Pixel with advanced matching + dedup
     fbq('track', 'Lead', {
       content_name: 'Heart Health Scorecard',
       event_source_url: window.location.href,
